--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ipykernel>=7.1.0",
     "langchain>=1.0.7",
     "langchain-google-genai>=3.0.3",
     "python-dotenv>=1.2.1",
+    "rav>=0.1.1",
 ]
