25112025-db-CRUD-tool

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 GOOGLE_API_KEY=
+LANGSMITH_TRACING=
+LANGSMITH_ENDPOINT=
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=
+PG_HOST=
+PG_DATABASE=
+PG_USER=
+PG_PASSWORD=
